unused QR page removed

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.14.3",
+    "@hyperledger/fabric-gateway": "^1.10.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
