--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "pdfkit": "^0.14.0",
     "qrcode": "^1.5.4",
